<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vintage"
    android:orientation="vertical"
    tools:context="com.bagirapp.vivalamusica.PlayListActivity">

    <ListView
        android:id="@+id/tracksList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/list_view_margin"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/actualTrack"
        style="@style/listItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/list_text_size"
        android:textStyle="bold"
        tools:text="@string/track2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_view_margin"
            android:layout_weight="1"
            android:background="@drawable/progress_drawable"
            android:contentDescription="@string/prev"
            android:src="@drawable/ic_action_playback_prev" />

        <ImageView
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_view_margin"
            android:layout_weight="1"
            android:background="@drawable/progress_drawable"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_action_playback_play" />


        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/list_view_margin"
            android:layout_weight="1"
            android:background="@drawable/progress_drawable"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_action_playback_next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_view_margin"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/list_view_margin"
            android:layout_weight="8"
            android:contentDescription="@string/progress"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/progress_drawable" />

        <TextView
            android:id="@+id/timer"
            style="@style/listItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/list_view_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textSize="@dimen/list_text_size"
            android:textStyle="bold"
            tools:text="3:45" />
    </LinearLayout>

</LinearLayout>
